Afinacion de detalles generales

--- a/src/too/sistemadeventasBundle/Resources/views/Sistema/catalogo.html.twig
+++ b/src/too/sistemadeventasBundle/Resources/views/Sistema/catalogo.html.twig
@@ -48,7 +48,9 @@
                             <div class="tab_desc1">
                                 <h3><a href="#">Nombre Producto</a></h3>
                                 <p>$0.00</p>
-                                <a href="#" class="to-cart"><span>Añadir a carrito</span><img src="{{ asset('images/plus.png') }}" alt=""></a>
+                                {% if user %}
+                                    <a href="#" class="to-cart"><span>Añadir a Carrito</span><img src="{{ asset('images/plus.png') }}" alt=""></a>
+                                {% endif %}
                             </div>
                         </div>
                         <div class="col-md-4 grid-4 grid-in" style="align-content: center">
@@ -56,42 +58,10 @@
                                 <img src="{{ asset('images/po4.jpg') }}" class="img-responsive" alt="">
                             </a>
                             <div class="tab_desc1" s>
-                                <h3><a href="#">Nombre P</a></h3>
-                                <p>$0.00</p>
-                                <a href="#" class="to-cart"><span>Añadir a Carrito</span><img src="{{ asset('images/plus.png') }}" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="col-md-4 grid-4 grid-in">
-                            <a href="#">
-                                <img src="{{ asset('images/po4.jpg')}}" class="img-responsive" alt="">
-                            </a>
-                            <div class="tab_desc1">
-                                <h3><a href="#">Nombre P</a></h3>
-                                <p>$0.00</p>
-                                <a href="#" class="to-cart"><span>Add To Cart</span><img src="{{ asset('images/plus.png') }}" alt=""></a>
-                            </div>
-                        </div>
-
-                        <div class="col-md-4 grid-4 grid-in">
-                            <a href="#">
-                                <img src="{{ asset('images/po4.jpg')}}" class="img-responsive" alt="">
-                            </a>
-                            <div class="tab_desc1">
-                                <h3><a href="#">Nombre P</a></h3>
-                                <p>$0.00</p>
-                                <a href="#" class="to-cart"><span>Add To Cart</span><img src="{{ asset('images/plus.png') }}" alt=""></a>
-                            </div>
-                        </div>
-
-                        <div class="col-md-4 grid-4 grid-in">
-                            <a href="#">
-                                <img src="{{ asset('images/po4.jpg')}}" class="img-responsive" alt="">
-                            </a>
-                            <div class="tab_desc1">
-                                <h3><a href="#">Nombre P</a></h3>
+                                <h3><a href="#">Nombre Producto</a></h3>
                                 <p>$0.00</p>
                                 {% if user %}
-                                    <a href="#" class="to-cart"><span>Add To Cart</span><img src="{{ asset('images/plus.png') }}" alt=""></a>
+                                    <a href="#" class="to-cart"><span>Añadir a Carrito</span><img src="{{ asset('images/plus.png') }}" alt=""></a>
                                 {% endif %}
                             </div>
                         </div>
@@ -100,19 +70,11 @@
                                 <img src="{{ asset('images/po4.jpg')}}" class="img-responsive" alt="">
                             </a>
                             <div class="tab_desc1">
-                                <h3><a href="#">Nombre P</a></h3>
+                                <h3><a href="#">Nombre Producto</a></h3>
                                 <p>$0.00</p>
-                                <a href="#" class="to-cart"><span>Add To Cart</span><img src="{{ asset('images/plus.png') }}" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="col-md-4 grid-4 grid-in">
-                            <a href="#">
-                                <img src="{{ asset('images/po4.jpg')}}" class="img-responsive" alt="">
-                            </a>
-                            <div class="tab_desc1">
-                                <h3><a href="#">Nombre P</a></h3>
-                                <p>$0.00</p>
-                                <a href="#" class="to-cart"><span>Add To Cart</span><img src="{{ asset('images/plus.png') }}" alt=""></a>
+                                {% if user %}
+                                    <a href="#" class="to-cart"><span>Añadir a Carrito</span><img src="{{ asset('images/plus.png') }}" alt=""></a>
+                                {% endif %}
                             </div>
                         </div>
 
@@ -121,9 +83,24 @@
                                 <img src="{{ asset('images/po4.jpg')}}" class="img-responsive" alt="">
                             </a>
                             <div class="tab_desc1">
-                                <h3><a href="#">Nombre P</a></h3>
+                                <h3><a href="#">Nombre Producto</a></h3>
                                 <p>$0.00</p>
-                                <a href="#" class="to-cart"><span>Add To Cart</span><img src="{{ asset('images/plus.png') }}" alt=""></a>
+                                {% if user %}
+                                    <a href="#" class="to-cart"><span>Añadir a Carrito</span><img src="{{ asset('images/plus.png') }}" alt=""></a>
+                                {% endif %}
+                            </div>
+                        </div>
+
+                        <div class="col-md-4 grid-4 grid-in">
+                            <a href="#">
+                                <img src="{{ asset('images/po4.jpg')}}" class="img-responsive" alt="">
+                            </a>
+                            <div class="tab_desc1">
+                                <h3><a href="#">Nombre Producto</a></h3>
+                                <p>$0.00</p>
+                                {% if user %}
+                                    <a href="#" class="to-cart"><span>Añadir a Carrito</span><img src="{{ asset('images/plus.png') }}" alt=""></a>
+                                {% endif %}
                             </div>
                         </div>
                         <div class="col-md-4 grid-4 grid-in">
@@ -131,9 +108,48 @@
                                 <img src="{{ asset('images/po4.jpg')}}" class="img-responsive" alt="">
                             </a>
                             <div class="tab_desc1">
-                                <h3><a href="#">Nombre P</a></h3>
+                                <h3><a href="#">Nombre Producto</a></h3>
                                 <p>$0.00</p>
-                                <a href="#" class="to-cart"><span>Add To Cart</span><img src="{{ asset('images/plus.png') }}" alt=""></a>
+                                {% if user %}
+                                    <a href="#" class="to-cart"><span>Añadir a Carrito</span><img src="{{ asset('images/plus.png') }}" alt=""></a>
+                                {% endif %}
+                            </div>
+                        </div>
+                        <div class="col-md-4 grid-4 grid-in">
+                            <a href="#">
+                                <img src="{{ asset('images/po4.jpg')}}" class="img-responsive" alt="">
+                            </a>
+                            <div class="tab_desc1">
+                                <h3><a href="#">Nombre Producto</a></h3>
+                                <p>$0.00</p>
+                                {% if user %}
+                                    <a href="#" class="to-cart"><span>Añadir a Carrito</span><img src="{{ asset('images/plus.png') }}" alt=""></a>
+                                {% endif %}
+                            </div>
+                        </div>
+
+                        <div class="col-md-4 grid-4 grid-in">
+                            <a href="#">
+                                <img src="{{ asset('images/po4.jpg')}}" class="img-responsive" alt="">
+                            </a>
+                            <div class="tab_desc1">
+                                <h3><a href="#">Nombre Producto</a></h3>
+                                <p>$0.00</p>
+                                {% if user %}
+                                    <a href="#" class="to-cart"><span>Añadir a Carrito</span><img src="{{ asset('images/plus.png') }}" alt=""></a>
+                                {% endif %}
+                            </div>
+                        </div>
+                        <div class="col-md-4 grid-4 grid-in">
+                            <a href="#">
+                                <img src="{{ asset('images/po4.jpg')}}" class="img-responsive" alt="">
+                            </a>
+                            <div class="tab_desc1">
+                                <h3><a href="#">Nombre Producto</a></h3>
+                                <p>$0.00</p>
+                                {% if user %}
+                                    <a href="#" class="to-cart"><span>Añadir a Carrito</span><img src="{{ asset('images/plus.png') }}" alt=""></a>
+                                {% endif %}
                             </div>
                         </div>
                         <div class="clearfix"></div>
