--- a/src/too/sistemadeventasBundle/Resources/views/Sistema/index.html.twig
+++ b/src/too/sistemadeventasBundle/Resources/views/Sistema/index.html.twig
@@ -28,7 +28,7 @@
                     </div>
                     <div class="lady-in">
                         <div class="col-md-4 you-para">
-                            <a href="single.html"><img class="img-responsive pic-in" src="{{ asset('images/pi.jpg')}}" alt=" " ></a>
+                            <a href="#"><img class="img-responsive pic-in" src="{{ asset('images/pi.jpg')}}" alt=" " ></a>
                             <div class="you-in">
                                 <span>15<label>%</label></span>
                                 <small>desc.</small>
@@ -37,22 +37,22 @@
                             <span>$0.00  |{% if user %} <label class="cat-in"> </label> <a href="#">Añadir a carrito</a></span>{% endif %}
                         </div>
                         <div class="col-md-4 you-para">
-                            <a href="single.html"><img class="img-responsive pic-in" src="{{ asset('images/pi4.jpg')}}" alt=" " ></a>
+                            <a href="#"><img class="img-responsive pic-in" src="{{ asset('images/pi4.jpg')}}" alt=" " ></a>
                             <div class="you-in">
                                 <span>15<label>%</label></span>
                                 <small>desc.</small>
                             </div>
                             <p>Nombre del producto</p>
-                            <span>$0.00  | <label class="cat-in"> </label> <a href="#">Añadir a carrito</a></span>
+                            <span>$0.00  | {% if user %} <label class="cat-in"> </label> <a href="#">Añadir a carrito</a></span>{% endif %}
                         </div>
                         <div class="col-md-4 you-para para-grid">
-                            <a href="single.html"><img class="img-responsive pic-in" src="{{ asset('images/pi5.jpg')}}" alt=" " ></a>
+                            <a href="#"><img class="img-responsive pic-in" src="{{ asset('images/pi5.jpg')}}" alt=" " ></a>
                             <div class="you-in">
                                 <span>15<label>%</label></span>
                                 <small>desc.</small>
                             </div>
                             <p>Nombre del producto</p>
-                            <span>$0.00  | <label class="cat-in"> </label> <a href="#">Añadir a carrito</a></span>
+                            <span>$0.00  | {% if user %} <label class="cat-in"> </label> <a href="#">Añadir a carrito</a></span>{% endif %}
                         </div>
 
 
@@ -67,12 +67,12 @@
                     </div>
                 </div>
                 <div class="discount">
-                    <a href="single.html"><img class="img-responsive pic-in" src="{{ asset('images/p2.jpg')}}" alt=" " >	</a>
+                    <a href="#"><img class="img-responsive pic-in" src="{{ asset('images/p2.jpg')}}" alt=" " >	</a>
                     <p class="no-more">Producto <b>exclusivo</b> <span>para ti!</span></p>
                     <a href="#" class="know-more">Obtener ahora</a>
                 </div>
                 <div class="discount">
-                    <a href="single.html"><img class="img-responsive pic-in" src="{{ asset('images/p3.jpg')}}" alt=" " ></a>
+                    <a href="#"><img class="img-responsive pic-in" src="{{ asset('images/p3.jpg')}}" alt=" " ></a>
                     <p class="no-more no-get">Obtener este <b>Producto</b> <span>Exclusivo</span></p>
                     <a href="#" class="know-more">Saber más</a>
                 </div>
@@ -90,27 +90,27 @@
                 <li><a href="#"><img class="img-responsive women" src="{{ asset('images/pic.jpg')}}" alt=""></a>
                     <div class="hide-in">
                         <p>Nombre del producto</p>
-                        <span>$0.00  |  <a href="#">Comprar ahora </a></span>
+                        <span>$0.00  |  {% if user %} <label class="cat-in"> </label> <a href="#">Añadir a carrito</a></span>{% endif %}
                     </div></li>
                 <li><a href="#"><img class="img-responsive women" src="{{ asset('images/pic1.jpg')}}" alt=""></a>
                     <div class="hide-in">
                         <p>Nombre del producto</p>
-                        <span>$0.00  |  <a href="#">Comprar ahora </a></span>
+                        <span>$0.00  |  {% if user %} <label class="cat-in"> </label> <a href="#">Añadir a carrito</a></span>{% endif %}
                     </div></li>
                 <li><a href="#"><img class="img-responsive women" src="{{ asset('images/pic3.jpg')}}" alt=""></a>
                     <div class="hide-in">
                         <p>Nombre del producto</p>
-                        <span>$0.00  |  <a href="#">Comprar ahora </a></span>
+                        <span>$0.00  |  {% if user %} <label class="cat-in"> </label> <a href="#">Añadir a carrito</a></span>{% endif %}
                     </div></li>
                 <li><a href="#"><img class="img-responsive women" src="{{ asset('images/pic4.jpg')}}" alt=""></a>
                     <div class="hide-in">
                         <p>Nombre del producto</p>
-                        <span>$0.00  |  <a href="#">Comprar ahora </a></span>
+                        <span>$0.00  |  {% if user %} <label class="cat-in"> </label> <a href="#">Añadir a carrito</a></span>{% endif %}
                     </div></li>
                 <li><a href="#"><img class="img-responsive women" src="{{ asset('images/pic2.jpg')}}" alt=""></a>
                     <div class="hide-in">
                         <p>Nombre del producto</p>
-                        <span>$0.00  |  <a href="#">Comprar ahora </a></span>
+                        <span>$0.00  |  {% if user %} <label class="cat-in"> </label> <a href="#">Añadir a carrito</a></span>{% endif %}
                     </div></li>
             </ul>
             <script type="text/javascript">
