--- a/src/too/sistemadeventasBundle/Resources/views/Sistema/promociones.html.twig
+++ b/src/too/sistemadeventasBundle/Resources/views/Sistema/promociones.html.twig
@@ -19,52 +19,52 @@
                                 <small>off</small>
                             </div>
                             <p>Nombre del producto</p>
-                            <span>$0.00  | <label class="cat-in"> </label> <a href="#">Añadir a carrito </a></span>
+                            <span>$0.00  | {% if user %}<label class="cat-in"> </label> <a href="#">Añadir a carrito </a></span>{% endif %}
                         </div>
                         <div class="col-md-4 you-women">
-                            <a href="single.html"><img class="img-responsive pic-in" src="{{ asset('images/pi5.jpg')}}" alt=" " ></a>
+                            <a href="#"><img class="img-responsive pic-in" src="{{ asset('images/pi5.jpg')}}" alt=" " ></a>
                             <div class=" you-two">
                                 <span>15<label>%</label></span>
                                 <small>off</small>
                             </div>
                             <p>Nombre del producto</p>
-                            <span>$0.00  | <label class="cat-in"> </label> <a href="#">Añadir a carrito </a></span>
+                            <span>$0.00  | {% if user %}<label class="cat-in"> </label> <a href="#">Añadir a carrito </a></span>{% endif %}
                         </div>
                         <div class="col-md-4 you-women para-grid">
-                            <a href="single.html"><img class="img-responsive pic-in" src="{{ asset('images/pi6.jpg')}}" alt=" " ></a>
+                            <a href="#"><img class="img-responsive pic-in" src="{{ asset('images/pi6.jpg')}}" alt=" " ></a>
                             <div class=" you-two">
                                 <span>15<label>%</label></span>
                                 <small>off</small>
                             </div>
                             <p>Nombre del producto</p>
-                            <span>$0.00  | <label class="cat-in"> </label> <a href="#">Añadir a carrito </a></span>
+                            <span>$0.00  | {% if user %}<label class="cat-in"> </label> <a href="#">Añadir a carrito </a></span>{% endif %}
                         </div>
                         <div class="col-md-4 you-women">
-                            <a href="single.html"><img class="img-responsive pic-in" src="{{ asset('images/pi.jpg')}}" alt=" " ></a>
+                            <a href="#"><img class="img-responsive pic-in" src="{{ asset('images/pi.jpg')}}" alt=" " ></a>
                             <div class="you-in you-two">
                                 <span>15<label>%</label></span>
                                 <small>off</small>
                             </div>
                             <p>Nombre del producto</p>
-                            <span>$0.00  | <label class="cat-in"> </label> <a href="#">Añadir a carrito </a></span>
+                            <span>$0.00  | {% if user %}<label class="cat-in"> </label> <a href="#">Añadir a carrito </a></span>{% endif %}
                         </div>
                         <div class="col-md-4 you-women">
-                            <a href="single.html"><img class="img-responsive pic-in" src="{{ asset('images/pi2.jpg')}}" alt=" " ></a>
+                            <a href="#"><img class="img-responsive pic-in" src="{{ asset('images/pi2.jpg')}}" alt=" " ></a>
                             <div class="you-in you-two">
                                 <span>15<label>%</label></span>
                                 <small>off</small>
                             </div>
                             <p>Nombre del producto</p>
-                            <span>$0.00  | <label class="cat-in"> </label> <a href="#">Añadir a carrito </a></span>
+                            <span>$0.00  | {% if user %}<label class="cat-in"> </label> <a href="#">Añadir a carrito </a></span>{% endif %}
                         </div>
                         <div class="col-md-4 you-women para-grid">
-                            <a href="single.html"><img class="img-responsive pic-in" src="{{ asset('images/pi3.jpg')}}" alt=" " ></a>
+                            <a href="#"><img class="img-responsive pic-in" src="{{ asset('images/pi3.jpg')}}" alt=" " ></a>
                             <div class=" you-two">
                                 <span>15<label>%</label></span>
                                 <small>off</small>
                             </div>
                             <p>Nombre del producto</p>
-                            <span>$0.00  | <label class="cat-in"> </label> <a href="#">Añadir a carrito </a></span>
+                            <span>$0.00  | {% if user %}<label class="cat-in"> </label> <a href="#">Añadir a carrito </a></span>{% endif %}
                         </div>
                         <div class="clearfix"> </div>
                     </div>
