--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -14,6 +14,7 @@ License: Universidad de El Salvador
 
             <link href="{{ asset('css/style.css')}}" rel="stylesheet" type="text/css" media="all" />
 
+
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
             <meta name="keywords" content="Fashion Store Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,
@@ -47,19 +48,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         </div>
                     {% else %}
                         {% for flashMessage in app.session.flashbag.get('mensaje') %}
-                            <br>
+
                             <div class="alert alert-danger fade in">
                             <span class="close" data-dismiss="alert">
                             &times;
                             </span>
                                 {{ flashMessage }}
                             </div>
+
+
                         {% endfor %}
                         <a href="#" class="sign-in">Login</a>
                         <form method='post' action="{{ path('login_form') }}">
                             <input type="text" name="_username" value="Username" onfocus="this.value='';" onblur="if (this.value == '') {this.value ='';} " required>
                             <input type="text" name="_password" value="Password" onfocus="this.value='';" onblur="if (this.value == '') {this.value ='';}" required>
-                            <input type="submit" value="Ir" >
+                            <input type="submit" value="Ir" id="ir">
                         </form>
                         <label>|</label>
                         <a href="{{ path('toosistemadeventas_registro') }}" class="sign-up">Registrarse</a>
@@ -80,7 +83,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <li {% block active1 %}{% endblock active1 %}><a href="{{ path('toosistemadeventas_inicio') }}">INICIO </a></li>
                         <li {% block active2 %}{% endblock active2 %}><a href="{{ path('toosistemadeventas_promociones') }}" >PROMOCIONES</a></li>
                         <li {% block active3 %}{% endblock active3 %}><a href="{{ path('catalogo') }}" >CATÁLOGO</a></li>
-                        <li {% block active4 %}{% endblock active4 %}><a href="#" >PRODUCTO3</a></li>
                     </ul>
                     <script>
                         $("span.menu").click(function(){
@@ -103,32 +105,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
 
         {% block body %}
-<<<<<<< HEAD
-=======
-            {% for type, flashMessage in app.session.flashbag.all() %}
-                <div class="alert alert-{{ type }} fade in">
-                    <button class="close" data-dismiss="alert" type="button">×</button>
-                    {% if flashMessage.title is defined %}
-                        <strong>{{ flashMessage.title }}</strong>
-                        {{ flashMessage.message }}
-                    {% else %}
-                        {{ type }}
-                    {% endif %}
-                </div>
-            {% endfor %}
->>>>>>> 8657f002f7cbe0dc9cef56b9ffc8622748d35c27
         {% endblock %}
         {% block javascripts %}{% endblock %}
+
 
     <div class="footer">
         <div class="container">
             <div class="footer-class">
                 <div class="class-footer">
                     <ul>
-                        <li ><a href="#" class="scroll">INICIO </a><label>|</label></li>
-                        <li><a href="#" class="scroll">PRODUCTO1</a><label>|</label></li>
-                        <li><a href="#" class="scroll">PRODUCTO2</a><label>|</label></li>
-                        <li><a href="#" class="scroll">PRODUCTO3</a><label>|</label></li>
+                        <li ><a href="{{ path('toosistemadeventas_inicio') }}" class="scroll">INICIO </a><label>|</label></li>
+                        <li><a href="{{ path('toosistemadeventas_promociones') }}" class="scroll">PROMOCIONES</a><label>|</label></li>
+                        <li><a href="{{ path('catalogo') }}" class="scroll">CATALOGO</a><label>|</label></li>
                     </ul>
                     <p class="footer-grid">&copy; 2015 Sistema de Ventas <a href="#" target="_blank"> TOO-115</a> </p>
                 </div>
