--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -34,7 +34,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="container">
                 <div class="header-grid">
                     <div class="logo">
-                        <a href="#"><img src="{{ asset('images/logo.png') }}" alt=" " ></a>
+                        <a href="{{ path('toosistemadeventas_inicio') }}"><img src="{{ asset('images/logo.png') }}" alt=" " ></a>
                     </div>
                 </div>
 
