--- a/src/too/sistemadeventasBundle/Resources/views/file.html.twig
+++ b/src/too/sistemadeventasBundle/Resources/views/file.html.twig
@@ -4,7 +4,7 @@
     <div class="content">
         <div class="container">
             <div class="register">
-                <form method="post" style="margin: 0 auto 0 auto;" action="{{ path('milton') }}">
+                <form method="post" style="margin: 0 auto 0 auto;" action="{{ path('file') }}" enctype="multipart/form-data">
                     <div class="register-top-grid"  style="margin: 0 auto 0 auto; text-align: center;">
                         <h3>REGISTRO DE USUARIO</h3>
                         <div class="mation">
